--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
         </section>
     </main>
     <script src="./main.js"></script>
+    <script src="./btnActiveMobile.js"></script>
 </body>
 </html>
